--- a/views/view.jade
+++ b/views/view.jade
@@ -2,8 +2,8 @@
 doctype html
 html(lang="fr")
   head
-    title My Own Bookmarks
+    title My withings
 
   body
-    h1 Welcome on My Own Bookmarks
-    p This application will help you manage your bookmarks!
+    h1 Welcome on My Withings
+    p This application will help you manage your life!
