--- a/views/view.jade
+++ b/views/view.jade
@@ -1,4 +1,4 @@
-# view/view.jade
+
 doctype html
 html(lang="fr")
   head
@@ -7,3 +7,4 @@ html(lang="fr")
   body
     h1 Welcome on My Withings
     p This application will help you manage your life!
+	p {view}
