--- a/views/view.jade
+++ b/views/view.jade
@@ -7,4 +7,4 @@ html(lang="fr")
   body
     h1 Welcome on My Withings
     p This application will help you manage your life!
-	p {view}
+	p #{view}
