--- a/views/view.jade
+++ b/views/view.jade
@@ -5,6 +5,5 @@ html(lang="fr")
     title My withings
 
   body
-    h1 Welcome on My Withings
-	for view in views
-	  li #{view}
+    for view in views
+     p #{view}
