--- a/views/weight.jade
+++ b/views/weight.jade
@@ -5,5 +5,5 @@ html(lang="fr")
     title My withings
 
   body
-    each view in views
-     li #{view}
+    each weight in weights
+     li #{weight}
