--- a/views/weight.jade
+++ b/views/weight.jade
@@ -10,9 +10,6 @@ html(lang="fr")
   canvas#line(height="350" width="600")
   script.
     var lineChartData = {
-       labels : ["January","February","March","April","May","June","July"], datasets : [{
-	       fillColor : "rgba(220,220,220,0.5)",strokeColor : "rgba(220,220,220,1)",pointColor : "rgba(220,220,220,1)",pointStrokeColor : "#fff", data : [65,59,90,81,56,55,40]
-			 }
-		  ]			
-	   }
-	   var myLine = new Chart(document.getElementById("line").getContext("2d")).Line(lineChartData);
+       labels : ["January","February","March","April","May","June","July"], datasets : [{fillColor : "rgba(220,220,220,0.5)",strokeColor : "rgba(220,220,220,1)",pointColor : "rgba(220,220,220,1)",pointStrokeColor : "#fff", data : [65,59,90,81,56,55,40]}]			
+	  }
+	  var myLine = new Chart(document.getElementById("line").getContext("2d")).Line(lineChartData);
