--- a/views/weight.jade
+++ b/views/weight.jade
@@ -1,6 +1,7 @@
 doctype html
 html(lang='en')
   head
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.js')
   body
     canvas#line(width='400', height='400')
     script.
