--- a/views/weight.jade
+++ b/views/weight.jade
@@ -5,7 +5,7 @@ html(lang='en')
   body
     canvas#line(width='400', height='400')
     script.
-      var data = {
+      var lineChartData = {
       labels: ["January", "February", "March", "April", "May", "June", "July"],
       datasets: [
       {
