--- a/views/weight.jade
+++ b/views/weight.jade
@@ -16,7 +16,7 @@ html(lang='en')
       pointStrokeColor: "#fff",
       pointHighlightFill: "#fff",
       pointHighlightStroke: "rgba(220,220,220,1)",
-      data: [10, 12]
+      data: weights
       }
       ]
       };
