--- a/views/weight.jade
+++ b/views/weight.jade
@@ -6,7 +6,7 @@ html(lang='en')
     canvas#line(width='400', height='400')
     script.
       var lineChartData = {
-      labels: ["January", "February", "March", "April", "May", "June", "July"],
+      labels: [#{dates}],
       datasets: [
       {
       label: "My First dataset",
