--- a/views/weight.jade
+++ b/views/weight.jade
@@ -3,10 +3,10 @@ html(lang='en')
   head
     script(src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.js')
   body
-  	h1(style='background-color:#d8d8d8;padding:10px')  Ma courbe de poids 
+    h1(style='background-color:#d8d8d8;padding:10px')  Ma courbe de poids 
     canvas#line(width='400', height='400')
     script.
-      var lineChartData = {
+      var data = {
       labels: [#{dates}],
       datasets: [
       {
