--- a/views/weight.jade
+++ b/views/weight.jade
@@ -6,7 +6,7 @@ html(lang='en')
     h1(style='background-color:#d8d8d8;padding:10px')  Ma courbe de poids 
     canvas#line(width='400', height='400')
     script.
-      var data = {
+      var lineChartData = {
       labels: [#{dates}],
       datasets: [
       {
