--- a/views/weight.jade
+++ b/views/weight.jade
@@ -4,7 +4,7 @@ html(lang='en')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.js')
   body
     h1(style='background-color:#d8d8d8;padding:10px;text-align:center;font-family:Arial')  Ma courbe de poids 
-    canvas#line(width='500', height='500', style='margin-left:100px')
+    canvas#line(width='500', height='500', style='margin-left:100px;margin-top:70px')
     script.
       var lineChartData = {
       labels: [#{dates}],
